@@ -279,7 +279,7 @@
           WRITE( unit, "(2x, 'nkpts = ',i4 ) " ) nkpts
           WRITE( unit, "(2x, 'Monkhorst-Pack grid:      nk = (',3i3,' ),', &
                         & 6x,'shift = (',3i3,' )' ) " ) & 
-                          nk(:), s(:)
+                          nk(:), NINT( s(:) )
           WRITE( unit, "(2x, 'K-point calculation: (cart. coord. in Ang^-1)' ) " )
           
           ALLOCATE( kpt_cart(3,nkpts), STAT=ierr)
